# mpv_stt_server

./: .gitignore  Cargo.toml  README.md
scripts/: cargo-with-mpv.sh
src/: main.rs  protocol.rs  server.rs  worker.rs
