[package]
name = "mpv-stt-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
bytes = "1.11.0"
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.9.2"
opus-static-sys = { git = "https://github.com/canxin121/opus-static-sys", branch = "link_issue" }
mpv_stt_plugin_rs = { path = "../mpv_stt_plugin_rs", default-features = false }
hound = "3.5.1"
tempfile = "3.24.0"

[features]
default = ["stt_local_cpu"]
stt_local_cpu = ["mpv_stt_plugin_rs/stt_local_cpu"]
stt_local_cuda = ["mpv_stt_plugin_rs/stt_local_cuda"]
stt_remote_udp = ["mpv_stt_plugin_rs/stt_remote_udp"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true